# StraddlingCheckerboard

./: README.md  pyproject.toml
docs/: PLAN.md
src/: lib.py  logging.py
